--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "tonc.h": "c"
+        "tonc.h": "c",
+        "intellisense.h": "c",
+        "object.h": "c",
+        "snake.h": "c"
     }
 }
